--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "hardhat": "^2.22.8"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.0.2",
     "@swisstronik/utils": "^1.3.0"
   }
 }
